ft_services/deploy_nginx.yaml
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: nginxwebsite
spec:
  selector:
    matchLabels:
      app: nginxwebsite
  replicas: 2 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: nginxwebsite
    spec:
      containers:
      - name: nginxwebsite
        image: dsy42/ft-services:latest
        ports:
        - containerPort: 80
